deployments/overlays/ingress/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jwt-inspect
  annotations:
    kubernetes.io/ingress.class: std-ingress-class 
spec:
  tls:
    - hosts:
        - <HOSTNAME>
  rules:
  - host: <HOSTNAME>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jwt-inspect
              port: 
                name: http
